@@ -2,9 +2,11 @@ Source: nitrogen
 Section: x11
 Priority: extra
 Maintainer: Mateusz Łukasik <mati75@linuxmint.pl>
-Build-Depends: debhelper (>= 7), autotools-dev, libgtkmm-2.4-dev, libxinerama-dev, autoconf, autopoint, automake, dpkg-dev (>= 1.16.1~)
-Standards-Version: 3.9.4
+Build-Depends: debhelper (>= 10), libgtkmm-2.4-dev, libxinerama-dev
+Standards-Version: 3.9.8
 Homepage: http://projects.l3ib.org/nitrogen/
+Vcs-Browser: https://github.com/mati75/nitrogen.git
+Vcs-Git: https://github.com/mati75/nitrogen.git
 
 Package: nitrogen
 Architecture: any
